tests/mm0_mmu/fail/bad-sort32.mmu
-- provable should be after strict
(sort s32 provable strict)